--- a/app/scss/blocks/nav.scss
+++ b/app/scss/blocks/nav.scss
@@ -3,12 +3,13 @@
 
 	position: absolute;
 	top: 63px;
-	left: 0;
 	right: 0;
 	z-index: 10;
 	margin: 0 15px;
+	width: 320px;
 
 	background-color: #fff;
+	box-shadow: 0 5px 5px rgba(0,0,0,.1);
 
 	transition: height .3s ease;
 	overflow: hidden;
@@ -21,6 +22,12 @@
 
 		flex-direction: column;
 
+		@media ($xxxl) {
+			flex-direction: row;
+		}
+	}
+	&__li--por{
+		position: relative;
 	}
 	&__ul-in{
 		display: none;
@@ -29,23 +36,47 @@
 			display: block;
 		}
 	}
-	&__li,
-	&__li-in{
-
-	}
 	&__link,
 	&__link-in{
 		display: block;
+
+		position: relative;
+
 		padding: 10px;
 
+		font-size: 16px;
 		font-weight: 400;
 		color: #000;
+
+		transition: color .5s ease;
+
+		@media ($xxxl) {
+			color: #fff;
+		}
 	}
 	&__link{
-		font-size: 16px;
-
 		&.active{
 			color: #ff1e48;
+		}
+		&--hover-underline{
+			&:before{
+				content: '';
+				position: absolute;
+				bottom: 0px;
+				left: 10px;
+				background-color: #ff1e48;
+				height: 5px;
+				border-radius: 3px;
+				width: 0;
+				transition: width .3s ease;
+			}
+			&:hover{
+				color: #414141;
+
+				&:before{
+					width: calc(100% - 20px);
+				}
+			}
 		}
 	}
 	&__link-in{
@@ -53,9 +84,47 @@
 
 		font-size: 14px;
 	}
-	&__link--show-ul:hover{
+	&__link--show-ul{
+		&:hover{
+			position: relative;
+
+			color: #ff1e48;
+			background-color: #fff;
+		}
+		&:hover + .nav__ul-in{
+
+			@media ($xxxl) {
+				display: block;
+
+				position: absolute;
+				top: 100%;
+				left: 0;
+				right: 0;
+				z-index: 1;
 
 
+				background-color: #fff;
+			}
+		}
+		&:hover + .nav__ul-in > .nav__li-in > .nav__link-in{
+			color: #000;
+		}
+	}
+
+	@media ($sm) {
+		top: 100px;
+	}
+
+	@media ($xxxl) {
+		display: block;
+
+		position: static;
+		width: auto;
+
+		background-color: transparent;
+		box-shadow: none;
+
+		overflow: visible;
 	}
 
 }
