--- a/app/scss/blocks/burger.scss
+++ b/app/scss/blocks/burger.scss
@@ -8,7 +8,7 @@
 	color: transparent;
 
 	width: 28px;
-	height: 20px;
+	height: 22px;
 
 	border: 0;
 
@@ -20,10 +20,10 @@
 		background-color: transparent;
 	}
 	&.active .burger__item:after{
-		transform: rotate(45deg) translate(5px, 6px);
+		transform: rotate(45deg) translate(6px, 6px);
 	}
 	&.active .burger__item:before{
-		transform: rotate(-45deg) translate(5px, -7px);
+		transform: rotate(-45deg) translate(6px, -7px);
 	}
 	&__item{
 		position: relative;
@@ -44,7 +44,7 @@
 			width: 100%;
 			left: 0;
 			right: 0;
-			bottom: 8px;
+			bottom: 9px;
 			height: 4px;
 
 			border-radius: 2px;
@@ -59,7 +59,7 @@
 			width: 100%;
 			left: 0;
 			right: 0;
-			top: 8px;
+			top: 9px;
 			height: 4px;
 
 			border-radius: 2px;
@@ -69,5 +69,9 @@
 			transition: transform .3s ease-out;
 
 		}
+	}
+
+	@media ($xxxl) {
+		display: none;
 	}
 }
