--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -4,8 +4,10 @@ $white: #fff;
 
 // Media
 $usm: "min-width: 475px";
-$sm: "min-width: 576px";
-$md: "min-width: 768px";
+$sm: "min-width: 575px";
+$md: "min-width: 767px";
 $lg: "min-width: 992px";
 $xl: "min-width: 1024px";
-$xxl: "min-width: 1200px";
+$xxl: "min-width: 1100px";
+$xxxl: "min-width: 1200px";
+$xxxxl: "min-width: 1300px";
