--- a/drivingschool/css/style.css
+++ b/drivingschool/css/style.css
@@ -85,6 +85,12 @@ body.no-scroll {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.header__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -94,9 +100,13 @@ body.no-scroll {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .intro {
@@ -142,7 +152,7 @@ body.no-scroll {
   font-size: 0;
   color: transparent;
   width: 28px;
-  height: 20px;
+  height: 22px;
   border: 0;
   background: none;
   outline: none;
@@ -153,15 +163,15 @@ body.no-scroll {
 }
 
 .burger.active .burger__item:after {
-  -webkit-transform: rotate(45deg) translate(5px, 6px);
-      -ms-transform: rotate(45deg) translate(5px, 6px);
-          transform: rotate(45deg) translate(5px, 6px);
+  -webkit-transform: rotate(45deg) translate(6px, 6px);
+      -ms-transform: rotate(45deg) translate(6px, 6px);
+          transform: rotate(45deg) translate(6px, 6px);
 }
 
 .burger.active .burger__item:before {
-  -webkit-transform: rotate(-45deg) translate(5px, -7px);
-      -ms-transform: rotate(-45deg) translate(5px, -7px);
-          transform: rotate(-45deg) translate(5px, -7px);
+  -webkit-transform: rotate(-45deg) translate(6px, -7px);
+      -ms-transform: rotate(-45deg) translate(6px, -7px);
+          transform: rotate(-45deg) translate(6px, -7px);
 }
 
 .burger__item {
@@ -182,7 +192,7 @@ body.no-scroll {
   width: 100%;
   left: 0;
   right: 0;
-  bottom: 8px;
+  bottom: 9px;
   height: 4px;
   border-radius: 2px;
   background-color: #fff;
@@ -199,7 +209,7 @@ body.no-scroll {
   width: 100%;
   left: 0;
   right: 0;
-  top: 8px;
+  top: 9px;
   height: 4px;
   border-radius: 2px;
   background-color: #fff;
@@ -214,11 +224,13 @@ body.no-scroll {
   display: none;
   position: absolute;
   top: 63px;
-  left: 0;
   right: 0;
   z-index: 10;
   margin: 0 15px;
+  width: 320px;
   background-color: #fff;
+  -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
   -webkit-transition: height .3s ease;
   -o-transition: height .3s ease;
   transition: height .3s ease;
@@ -239,6 +251,10 @@ body.no-scroll {
           flex-direction: column;
 }
 
+.nav__li--por {
+  position: relative;
+}
+
 .nav__ul-in {
   display: none;
 }
@@ -250,17 +266,40 @@ body.no-scroll {
 .nav__link,
 .nav__link-in {
   display: block;
+  position: relative;
   padding: 10px;
+  font-size: 16px;
   font-weight: 400;
   color: #000;
-}
-
-.nav__link {
-  font-size: 16px;
+  -webkit-transition: color .5s ease;
+  -o-transition: color .5s ease;
+  transition: color .5s ease;
 }
 
 .nav__link.active {
   color: #ff1e48;
+}
+
+.nav__link--hover-underline:before {
+  content: '';
+  position: absolute;
+  bottom: 0px;
+  left: 10px;
+  background-color: #ff1e48;
+  height: 5px;
+  border-radius: 3px;
+  width: 0;
+  -webkit-transition: width .3s ease;
+  -o-transition: width .3s ease;
+  transition: width .3s ease;
+}
+
+.nav__link--hover-underline:hover {
+  color: #414141;
+}
+
+.nav__link--hover-underline:hover:before {
+  width: calc(100% - 20px);
 }
 
 .nav__link-in {
@@ -268,11 +307,28 @@ body.no-scroll {
   font-size: 14px;
 }
 
+.nav__link--show-ul:hover {
+  position: relative;
+  color: #ff1e48;
+  background-color: #fff;
+}
+
+.nav__link--show-ul:hover + .nav__ul-in > .nav__li-in > .nav__link-in {
+  color: #000;
+}
+
+.tel {
+  margin-bottom: 10px;
+}
+
 .tel__link {
   position: relative;
   font-size: 18px;
   font-weight: 400;
   color: #fff;
+  -webkit-transition: color .5s ease;
+  -o-transition: color .5s ease;
+  transition: color .5s ease;
 }
 
 .tel__link:after {
@@ -285,6 +341,10 @@ body.no-scroll {
   background: url("../img/tel/tel.svg") center/contain no-repeat;
 }
 
+.tel__link:hover {
+  color: #414141;
+}
+
 .btn {
   display: inline-block;
   vertical-align: top;
@@ -292,6 +352,59 @@ body.no-scroll {
   font-family: inherit;
   background: none;
   border: 0;
+}
+
+.btn-discount {
+  display: none;
+  margin-right: 15px;
+  padding: .6em 1em;
+  font-size: 10px;
+  font-weight: 700;
+  color: #fff;
+  line-height: calc(15/10);
+  text-transform: uppercase;
+  white-space: nowrap;
+  border-radius: .4em;
+  background-color: #ff1e48;
+  -webkit-transition: -webkit-box-shadow .5s ease;
+  transition: -webkit-box-shadow .5s ease;
+  -o-transition: box-shadow .5s ease;
+  transition: box-shadow .5s ease;
+  transition: box-shadow .5s ease, -webkit-box-shadow .5s ease;
+}
+
+.btn-discount:hover {
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
+
+.btn-discount:focus {
+  outline: 0;
+  -webkit-box-shadow: 0 0 0.2rem rgba(0, 123, 255, 0.25);
+          box-shadow: 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.btn-discount--2 {
+  margin: 0 0 10px 0;
+}
+
+.address {
+  display: none;
+  position: relative;
+  font-size: 12px;
+  font-weight: 400;
+  color: #fff;
+  line-height: 1;
+}
+
+.address:after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: -37px;
+  width: 17px;
+  height: 17px;
+  background: url("../img/address/point.svg") center/contain no-repeat;
 }
 
 .tac {
@@ -320,7 +433,57 @@ body.no-scroll {
   font-weight: 700;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 475px) {
+  .btn-discount--1 {
+    display: block;
+  }
+}
+
+@media (min-width: 575px) {
+  .header__inner {
+    padding-top: 30px;
+  }
+
+  .logo__img {
+    width: 200px;
+  }
+
+  .nav {
+    top: 100px;
+  }
+
+  .tel__link:after {
+    top: 7px;
+  }
+
+  .tel__link {
+    font-size: 24px;
+  }
+
+  .btn-discount--1 {
+    display: none;
+  }
+
+  .btn-discount--2 {
+    display: block;
+    padding: .6em 2.5em;
+    font-size: 11px;
+  }
+
+  .address {
+    display: block;
+  }
+}
+
+@media (min-width: 767px) {
+  .btn-discount--2 {
+    font-size: 12px;
+  }
+
+  .address {
+    font-size: 14px;
+  }
+
   .helper-media-tac-md {
     text-align: center;
   }
@@ -329,5 +492,53 @@ body.no-scroll {
 @media (min-width: 992px) {
   .helper-media-tac-lg {
     text-align: center;
+  }
+}
+
+@media (min-width: 1200px) {
+  .burger {
+    display: none;
+  }
+
+  .nav__ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+
+  .nav__link,
+  .nav__link-in {
+    color: #fff;
+  }
+
+  .nav__link--show-ul:hover + .nav__ul-in {
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    background-color: #fff;
+  }
+
+  .nav {
+    display: block;
+    position: static;
+    width: auto;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    overflow: visible;
+  }
+}
+
+@media (min-width: 1300px) {
+  .header__inner {
+    padding-top: 65px;
+  }
+
+  .logo__img {
+    width: 250px;
   }
 }
