--- a/app/scss/section/intro.scss
+++ b/app/scss/section/intro.scss
@@ -16,13 +16,48 @@
 
 		background-color: rgba(#000,.5);
 	}
-	&__inner{
-
-
-	}
 	&__img{
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+	}
+	& > .container{
+		position: absolute;
+		top: 50%;
+		z-index: 1;
+
+		transform: translate(0, -50%);
+	}
+	&__title{
+		margin-bottom: 20px;
+
+		font-size: 22px;
+		font-weight: 400;
+		color: #fff;
+		line-height: 1.3;
+
+		&--ttu{
+			text-transform: uppercase;
+		}
+	}
+	&__p{
+		margin-bottom: 20px;
+
+		padding: 0 10px;
+
+		font-size: 22px;
+		font-weight: 400;
+		color: #fff;
+		line-height: 1.5;
+		text-transform: uppercase;
+
+		display: inline-block;
+		background-color: #f00;
+	}
+	&__subtitle{
+		font-size: 16px;
+		font-weight: 400;
+		color: #fff;
+		line-height: 1.5;
 	}
 }
