--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -35,6 +35,8 @@
 @import "blocks/tel";
 @import "blocks/btn";
 @import "blocks/address";
+@import "blocks/scroll";
+@import "blocks/topscroll";
 
 
 
