--- a/app/scss/blocks/burger.scss
+++ b/app/scss/blocks/burger.scss
@@ -69,10 +69,10 @@
 			transition: transform .3s ease-out;
 
 		}
-		&.black{
-			background-color: #000;
+		// &.black{
+		// 	background-color: #000;
 
-		}
+		// }
 	}
 
 	@media ($xxxl) {
