--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -7,6 +7,8 @@ body{
     overflow-x: hidden;
     line-height: 1.5;
 
+    position: relative;
+
     &.no-scroll{
         overflow: hidden;
     }
