--- a/app/scss/section/intro.scss
+++ b/app/scss/section/intro.scss
@@ -39,6 +39,13 @@
 		&--ttu{
 			text-transform: uppercase;
 		}
+
+		@media ($sm) {
+			font-size: 33px;
+		}
+		@media ($xxxl) {
+			font-size: 44px;
+		}
 	}
 	&__p{
 		margin-bottom: 20px;
@@ -53,11 +60,25 @@
 
 		display: inline-block;
 		background-color: #f00;
+
+		@media ($sm) {
+			font-size: 33px;
+		}
+		@media ($xxxl) {
+			font-size: 44px;
+		}
 	}
 	&__subtitle{
 		font-size: 16px;
 		font-weight: 400;
 		color: #fff;
 		line-height: 1.5;
+
+		@media ($sm) {
+			font-size: 24px;
+		}
+		@media ($xxxl) {
+			font-size: 32px;
+		}
 	}
 }
