--- a/drivingschool/css/style.css
+++ b/drivingschool/css/style.css
@@ -51,6 +51,7 @@ body {
   color: #000;
   overflow-x: hidden;
   line-height: 1.5;
+  position: relative;
 }
 
 body.no-scroll {
@@ -70,11 +71,10 @@ body.no-scroll {
   left: 0;
   right: 0;
   z-index: 1000;
-  -webkit-transition: background-color .3s ease;
-  -o-transition: background-color .3s ease;
-  transition: background-color .3s ease;
-  -webkit-animation: header-not-fixed .5s ease;
-          animation: header-not-fixed .5s ease;
+  background-color: transparent;
+  -webkit-transition: background-color .5s ease;
+  -o-transition: background-color .5s ease;
+  transition: background-color .5s ease;
 }
 
 .header.fixed {
@@ -86,6 +86,58 @@ body.no-scroll {
   background-color: #fff;
   -webkit-animation: header-fixed .5s ease;
           animation: header-fixed .5s ease;
+}
+
+.header.fixed .logo__img--white {
+  display: none;
+}
+
+.header.fixed .logo__img--black {
+  display: block;
+}
+
+.header.fixed .burger__item {
+  background-color: #000;
+}
+
+.header.fixed .burger__item:after {
+  background-color: #000;
+}
+
+.header.fixed .burger__item:before {
+  background-color: #000;
+}
+
+.header.fixed .tel--white {
+  display: none;
+}
+
+.header.fixed .tel--black {
+  display: block;
+}
+
+.header.fixed .header__inner {
+  padding-top: 10px;
+}
+
+.header.fixed .header__up {
+  margin-bottom: 10px;
+}
+
+.header.fixed .nav {
+  top: 43px;
+}
+
+.header.fixed .btn-discount--1 {
+  display: none;
+}
+
+.header.fixed .btn-discount--2 {
+  display: none;
+}
+
+.header.fixed .address {
+  display: none;
 }
 
 .header__inner {
@@ -149,28 +201,8 @@ body.no-scroll {
   }
 }
 
-@-webkit-keyframes header-not-fixed {
-  0% {
-    background-color: #fff;
-  }
-
-  100% {
-    background-color: transparent;
-  }
-}
-
-@keyframes header-not-fixed {
-  0% {
-    background-color: #fff;
-  }
-
-  100% {
-    background-color: transparent;
-  }
-}
-
 main {
-  height: 2000px;
+  height: 4000px;
 }
 
 .intro {
@@ -248,16 +280,8 @@ main {
   width: 130px;
 }
 
-.logo__img--white.hidden {
-  display: none;
-}
-
 .logo__img--black {
   display: none;
-}
-
-.logo__img--black.active {
-  display: block;
   width: 130px;
 }
 
@@ -337,10 +361,6 @@ main {
   transition: transform .3s ease-out, -webkit-transform .3s ease-out;
 }
 
-.burger__item.black {
-  background-color: #000;
-}
-
 .nav {
   display: none;
   position: absolute;
@@ -351,7 +371,6 @@ main {
   background-color: #fff;
   -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
           box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
-  white-space: nowrap;
   -webkit-transition: height .3s ease;
   -o-transition: height .3s ease;
   transition: height .3s ease;
@@ -436,10 +455,6 @@ main {
   margin-bottom: 10px;
 }
 
-.tel--white.hidden {
-  display: none;
-}
-
 .tel__link--white {
   position: relative;
   font-size: 18px;
@@ -466,10 +481,6 @@ main {
 
 .tel--black {
   display: none;
-}
-
-.tel--black.active {
-  display: block;
 }
 
 .tel__link--black {
@@ -541,6 +552,55 @@ main {
   background: url("../img/address/point.svg") center/contain no-repeat;
 }
 
+.scroll {
+  display: none;
+  position: absolute;
+  bottom: 40px;
+  left: 15px;
+  z-index: 1;
+  width: 54px;
+  height: 80px;
+  cursor: pointer;
+}
+
+.topscroll {
+  opacity: 0;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  z-index: 1000;
+  padding: 14px 12px;
+  width: 48px;
+  height: 64px;
+  background-color: #222;
+  border-radius: 3px;
+  -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: opacity .5s ease-in-out;
+  -o-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+}
+
+.topscroll.active {
+  opacity: 1;
+}
+
+.topscroll__link {
+  color: #fff;
+  font-size: 24px;
+  text-align: center;
+}
+
 .tac {
   text-align: center;
 }
@@ -578,7 +638,23 @@ main {
     padding-top: 30px;
   }
 
+  .intro__title {
+    font-size: 33px;
+  }
+
+  .intro__p {
+    font-size: 33px;
+  }
+
+  .intro__subtitle {
+    font-size: 24px;
+  }
+
   .logo__img--white {
+    width: 200px;
+  }
+
+  .logo__img--black {
     width: 200px;
   }
 
@@ -587,12 +663,12 @@ main {
     width: 320px;
   }
 
-  .tel__link--white:after {
-    top: 7px;
+  .tel__link {
+    font-size: 24px;
   }
 
-  .tel__link--white {
-    font-size: 24px;
+  .tel__link--white:after {
+    top: 7px;
   }
 
   .btn-discount--1 {
@@ -606,6 +682,10 @@ main {
   }
 
   .address {
+    display: block;
+  }
+
+  .scroll {
     display: block;
   }
 }
@@ -631,6 +711,26 @@ main {
 }
 
 @media (min-width: 1200px) {
+  .header.fixed .tel--black {
+    display: none;
+  }
+
+  .header.fixed .nav__link {
+    color: #000;
+  }
+
+  .intro__title {
+    font-size: 44px;
+  }
+
+  .intro__p {
+    font-size: 44px;
+  }
+
+  .intro__subtitle {
+    font-size: 32px;
+  }
+
   .burger {
     display: none;
   }
