10:51 сделал третий блок

--- a/app/scss/blocks/scroll.scss
+++ b/app/scss/blocks/scroll.scss
@@ -15,4 +15,32 @@
 	@media ($sm) {
 		display: block;
 	}
+	&:hover{
+		animation: up-down 1.4s ease;
+	}
+}
+
+@keyframes up-down {
+	0%{
+		transform: translate(0, -10%);
+	}
+	15%{
+		transform: translate(0, 10%);
+	}
+	30%{
+		transform: translate(0, -5%);
+	}
+	45%{
+		transform: translate(0, 5%);
+	}
+	60%{
+		transform: translate(0, -2%);
+	}
+	75%{
+		transform: translate(0, 2%);
+	}
+	90%{
+		transform: translate(0, 0);
+	}
+
 }
