--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -38,6 +38,8 @@
 @import "blocks/address";
 @import "blocks/scroll";
 @import "blocks/topscroll";
+@import "blocks/section";
+@import "blocks/six-block";
 
 
 
