--- a/app/scss/blocks/address.scss
+++ b/app/scss/blocks/address.scss
@@ -8,6 +8,16 @@
 	color: #fff;
 	line-height: 1;
 
+	@media ($sm) {
+		font-size: 14px;
+	}
+	@media ($xxxl) {
+		font-size: 16px;
+	}
+	@media ($xxxxl) {
+		font-size: 18px;
+	}
+
 	&:after{
 		content: "";
 		position: absolute;
@@ -17,6 +27,13 @@
 		height: 17px;
 
 		background: url("../img/address/point.svg") center/contain no-repeat;
+
+		@media ($xxxl) {
+			left: -50px;
+
+			width: 32px;
+			height: 32px;
+		}
 	}
 
 	@media ($sm) {
