--- a/app/scss/blocks/tel.scss
+++ b/app/scss/blocks/tel.scss
@@ -7,6 +7,9 @@
 		@media ($sm) {
 			font-size: 24px;
 		}
+		@media ($xxxl) {
+			font-size: 40px;
+		}
 	}
 	&__link--white{
 		position: relative;
@@ -29,6 +32,12 @@
 
 			@media ($sm) {
 				top: 7px;
+			}
+			@media ($xxxl) {
+				top: 9px;
+				left: -50px;
+				width: 40px;
+				height: 40px;
 			}
 		}
 		&:hover{
