17:03 работа над паралакс блоком

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -24,6 +24,7 @@
 @import "section/header";
 @import "section/intro";
 @import "section/subintro";
+@import "section/registration";
 @import "section/footer";
 
 
