--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -41,6 +41,8 @@
 @import "blocks/topscroll";
 @import "blocks/section";
 @import "blocks/six-block";
+@import "blocks/form";
+@import "blocks/ajax-loader";
 
 
 
