--- a/app/scss/blocks/btn.scss
+++ b/app/scss/blocks/btn.scss
@@ -86,4 +86,32 @@
 			box-shadow: 0 0 0.2rem rgba(0,123,255,.25);
 		}
 	}
+	&-send{
+		padding: 0.75em 1.25em;
+		width: 100%;
+
+		font-size: 16px;
+		font-weight: 400;
+		color: #fff;
+		line-height: 1.25;
+
+		border-radius: 0.3em;
+
+		background-color: #f00;
+
+		transition: background-color .5s ease;
+
+
+		@media ($sm) {
+			max-width: 260px;
+
+		}
+		&:hover{
+			background-color: #ff1e48;
+		}
+		&:focus{
+			outline: 0;
+			box-shadow: inset 0 0 8px rgba(0,0,0,0.08);
+		}
+	}
 }
