--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -43,6 +43,8 @@
 @import "blocks/six-block";
 @import "blocks/form";
 @import "blocks/ajax-loader";
+@import "blocks/copyright";
+@import "blocks/privacy-policy";
 
 
 
