--- a/app/scss/blocks/ajax-loader.scss
+++ b/app/scss/blocks/ajax-loader.scss
@@ -1,6 +1,6 @@
 .ajax-loader{
 	visibility: hidden;
-	display: inline-block;
+	display: block;
 	background-image: url("../img/loader/ajax-loader.gif");
 	width: 16px;
 	height: 16px;
