--- a/app/scss/blocks/tel.scss
+++ b/app/scss/blocks/tel.scss
@@ -3,6 +3,13 @@
 		margin-bottom: 10px;
 
 	}
+	&--black{
+		display: none;
+	}
+	&--footer{
+		text-align: center;
+
+	}
 	&__link{
 		@media ($sm) {
 			font-size: 24px;
@@ -46,17 +53,11 @@
 
 
 	}
-	&--black{
-		display: none;
-
-
-	}
 	&__link--black{
 		font-size: 18px;
 		font-weight: 400;
 		color: #000;
 		line-height: 1;
-
 	}
 
 }
