--- a/app/scss/section/footer.scss
+++ b/app/scss/section/footer.scss
@@ -1,7 +1,20 @@
 .footer{
-	padding: 40px 0 20px;
+	max-width: 1400px;
+	margin: 0 auto;
+	background-color: #414141;
 
-	&__inner{
-		background-color: #414141;
+	padding: 40px 0 75px;
+
+	@media($sm) {
+		padding: 40px 20px;
+	}
+	&__up{
+		@media($sm) {
+			margin-bottom: 40px;
+
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
 	}
 }
